# STL-channels-encoder

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
FacetChannelEncoder/: __init__.py
VertexChannelEncoder/: __init__.py
facet_ch_encoder/lib/: __init__.py  facet_ch_encoder.py
facet_ch_encoder/tests/: facet_ch_encoder_test.py
vertex_ch_encoder/lib/: __init__.py  vertex_ch_encoder.py
vertex_ch_encoder/tests/: vertex_ch_encoder_test.py
vertex_ch_encoder/tests/test_objects/base2/scaleup/: original_sphere.STL  scaledup_sphere.STL
